fix: `getFirst` is not available yet